# ros_torch_libtorch

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  package.xml
script/: example.py  pytorch_publisher.py
src/: torch_publisher.cpp
